[project]
name = "oaas-collections-agent"
version = "0.1.0"
description = "AI-powered collections agent using psychological escalation techniques"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "requests>=2.31.0",
    "supabase>=2.0.0",
    "stripe>=8.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"src/dashboard/app.py" = ["E501", "N801"]
"tests/test_csv_importer.py" = ["E501"]

[tool.mypy]
ignore_missing_imports = true
no_strict_optional = true
warn_unused_ignores = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "src.db.models"
disable_error_code = ["return-value"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
